--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,10 +1,111 @@
 body{
-  margin: 0;
+  margin: 3%;
   padding: 0;
   position: fixed;
   top: 0;
   bottom: 0;
-  left: 0;
   right: 0;
+  left: 0;
+  background-color: #DADBDC;
+  right: 0;
+}
+header{
+  width: 100%;
+  height: 70px;
+  display: grid;
+  grid-template: 1fr 1fr;
+  background-color: #C6C5C5;
+  align: "center";
+}
+aside{
+  right: 10;
+}
+h1{
+  color: #34495E;
+}
+h2{
+  color: #2C3E50;
+}
+.boton_personalizado{
+    width:80px;
+    height:3px;
+    padding: .6rem 1rem;
+    border-radius: 4px;
+    font-weight: 50;
+    font-size: 10px;
+    color: #5D6D7E;
+    background: #FAFBFC;
+    border-radius: 6px;
+    border: 2px solid #2C3E50;
+    text-shadow: 0 -1px 0 rgba(0,0,0,.5);
+    text-align: center;
 
+  }
+.boton_personalizado:hover {
+      background-color: #BDC3C7;
+      color: white;
+ }
+
+.boton_clientes{
+  width:80px;
+  height:3px;
+  padding: .6rem 1rem;
+  border-radius: 4px;
+  font-weight: 50;
+  font-size: 10px;
+  color: #5D6D7E;
+  background: #FAFBFC;
+  border-radius: 5px;
+  border: 2px solid #2C3E50;
+  text-shadow: 0 -1px 0 rgba(0,0,0,.5);
+  text-align: center;
+}
+.boton_clientes:hover {
+      background-color: #BDC3C7;
+      color: white;
+    }
+.lineasComando{
+  width:50%;
+  height:30px;
+}
+.vista_general{
+  height: 600px;
+  width: 100%;
+  background-color: #71B5F9;
+  border: 20px;
+}
+.lista{
+  width: 20%;
+  height: 600px;
+  background-color: #E271F9;
+  float:left;
+  margin: 10px;
+  border-radius: 15px;
+  border-style: solid;
+  border-color: red;
+  padding: 10px;
+}
+
+.rainbow-button {
+  text-decoration:none;
+  color:#FFF;
+  width:calc(70px + 3px);
+  height:calc(3px + 30px);
+  background-image: linear-gradient(90deg, #5D6D7E 0%, #34495E 49%, #283747 80%, #212F3C 100%);
+  border-radius:5px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  text-transform:uppercase;
+  font-size:1vw;
+  font-weight:bold;
+}
+.rainbow-button:hover {
+  animation:slidebg 2s linear infinite;
+}
+
+@keyframes slidebg {
+  to {
+    background-position:20vw;
+  }
 }
