--- a/web/css/main.css
+++ b/web/css/main.css
@@ -109,3 +109,39 @@ h2{
     background-position:20vw;
   }
 }
+.boton_issues{
+  width:80px;
+  height:3px;
+  padding: .6rem 1rem;
+  border-radius: 4px;
+  font-weight: 50;
+  font-size: 10px;
+  color: #5D6D7E;
+  background: #FAFBFC;
+  border-radius: 5px;
+  border: 2px solid #2C3E50;
+  text-shadow: 0 -1px 0 rgba(0,0,0,.5);
+  text-align: center;
+}
+.boton_issues:hover {
+      background-color: #BDC3C7;
+      color: white;
+    }
+.boton_sondas{
+  width:80px;
+  height:3px;
+  padding: .6rem 1rem;
+  border-radius: 4px;
+  font-weight: 50;
+  font-size: 10px;
+  color: #5D6D7E;
+  background: #FAFBFC;
+  border-radius: 5px;
+  border: 2px solid #2C3E50;
+  text-shadow: 0 -1px 0 rgba(0,0,0,.5);
+  text-align: center;
+}
+.boton_sondas:hover {
+      background-color: #BDC3C7;
+      color: white;
+    }
