--- a/web/css/main.css
+++ b/web/css/main.css
@@ -52,61 +52,45 @@ h1{
     display: inline;
  }
 
-
-
 .boton_clientes li a:hover{
     background-color: #BDC3C7;
 	border-right: 20px solid #BDC3C7;
 	border-left: 20px solid #BDC3C7;
  }
 
-
-
-
 .lineasComando{
   width:65%;
   height:40px;
   border-radius: 7px;
   margin: 15px;
-
 }
 
 .lista{
-  width: 20%;
+  width: 48%;
   height: 600px;
-  background-color: #E271F9;
-  float:left;
-  margin: 10px;
-  border-radius: 15px;
-  border-style: solid;
-  border-color: red;
-  padding: 10px;
+  background-color: #929292;
+  padding: 5px;
+  border: 1px solid #53a9ff;
+  overflow: auto;
 }
 
-
-.rainbow-button {
-  text-decoration:none;
-  color:#FFF;
-  width:calc(70px + 3px);
-  height:calc(3px + 30px);
-  background-image: linear-gradient(90deg, #5D6D7E 0%, #34495E 49%, #283747 80%, #212F3C 100%);
-  border-radius:5px;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  text-transform:uppercase;
-  font-size:1vw;
-  font-weight:bold;
-}
-.rainbow-button:hover {
-  animation:slidebg 2s linear infinite;
+#divReporte{
+  width: 50%;
+  float: right;
+  height: 600px;
+  background-color: #929292;
+  padding: 5px;
+  border: 1px solid #53a9ff;
 }
 
-@keyframes slidebg {
-  to {
-    background-position:20vw;
+#issues {
+  width: 47%;
+  height: 600px;
+  background-color: #929292;
+  padding: 5px;
+  border: 1px solid #53a9ff;
   }
-}
+
 .boton_issues{
   width:80px;
   height:3px;
@@ -125,44 +109,42 @@ h1{
       background-color: #BDC3C7;
       color: white;
     }
-.boton_sondas{
-  width:80px;
-  height:3px;
-  padding: .6rem 1rem;
-  border-radius: 4px;
-  font-weight: 50;
-  font-size: 10px;
-  color: #5D6D7E;
-  background: #FAFBFC;
-  border-radius: 5px;
-  border: 2px solid #2C3E50;
-  text-shadow: 0 -1px 0 rgba(0,0,0,.5);
+
+.boton_sondas_A{
+  width: 60%;
+  height: 30px;
+  padding-top: 10px;
+  font-size: 20px;
+  color: #dadada;
+  background: #444e4b;
+  border: 1px solid #dcdcdc;
   text-align: center;
+  margin: 5px;
+  list-style:none;
 }
-.boton_sondas:hover {
-      background-color: #BDC3C7;
+
+.boton_sondas_B{
+  width: 60%;
+  height: 30px;
+  padding-top: 10px;
+  font-size: 20px;
+  color: #d2d2d2;
+  background: #717171;
+  border: 1px solid #dcdcdc;
+  text-align: center;
+  margin: 5px;
+  list-style:none;
+}
+
+.boton_sondas_A:hover {
+      background-color: #36986b;
       color: white;
     }
-
-.boton_personalizado{
-    width:80px;
-    height:3px;
-    padding: .6rem 1rem;
-    border-radius: 4px;
-    font-weight: 50;
-    font-size: 10px;
-    color: #5D6D7E;
-    background: #FAFBFC;
-    border-radius: 6px;
-    border: 2px solid #2C3E50;
-    text-shadow: 0 -1px 0 rgba(0,0,0,.5);
-    text-align: center;
-
-  }
-.boton_personalizado:hover {
-      background-color: #BDC3C7;
+.boton_sondas_B:hover {
+      background-color: #36986b;
       color: white;
- }
+}
+
 .menuPrincipal {
     width: 100%;
     height: 30px;
@@ -191,3 +173,16 @@ h1{
   background-color: #626262;
   color: #D9D9D9;
   }
+
+#boton-buscar{
+  height: 40px;
+  width: 10%;
+  background-color: #7b7b7b;
+  color: #d2d2d2;
+}
+
+#seccionGenerar{
+  width: 20%;
+  height: 40px;
+  background-color:red;
+}
